Closed
Bug 264679
Opened 21 years ago
Closed 21 years ago
Clicking on fallback image starts drag because of plugin finder service
Categories
(Toolkit Graveyard :: Plugin Finder Service, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: jst)
References
(
URL
)
Details
(Keywords: fixed-aviary1.0, fixed1.7.5, regression, Whiteboard: [HAVE FIX])
Attachments
(1 file, 1 obsolete file)
|
4.56 KB,
patch
|
doronr
:
review+
bzbarsky
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
BUILD: Current branch Firefox nightly
STEPS TO REPRODUCE:
1) Load the URL in the "URL" field
2) Click on the image
3) Wait for plugin finder service dialog to tell you there are no suitable
plugins
4) Click Finish in the dialog
EXPECTED RESULTS: Dialog goes away and the link is followed.
ACTUAL RESULTS: Dialog goes away and the cursor looks like a drag cursor.
Clicking somewhere performs a drop of the image at that point. It's impossible
to follow the link.
NOTE: Actually trying to drag the image instead of just clicking _still_ gives
this popup dialog.
The mishandling of fallback content is a pretty serious regression in <object>
handling over SeaMonkey...
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #162799 -
Flags: superreview?(bzbarsky)
Attachment #162799 -
Flags: review?(doronr)
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #162799 -
Attachment is obsolete: true
Attachment #162799 -
Flags: superreview?(bzbarsky)
Attachment #162799 -
Flags: review?(doronr)
| Assignee | ||
Updated•21 years ago
|
Attachment #162801 -
Flags: superreview?(bzbarsky)
Attachment #162801 -
Flags: review?(doronr)
| Reporter | ||
Comment 3•21 years ago
|
||
Comment on attachment 162801 [details] [diff] [review]
Let object-tags deal with their own events, only regsiter click events on non-object tags.
sr=bzbarsky
Attachment #162801 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Flags: blocking-aviary1.0?
Keywords: regression
OS: Linux → All
Priority: -- → P2
Hardware: PC → All
Whiteboard: [HAVE FIX]
Updated•21 years ago
|
Attachment #162801 -
Flags: review?(doronr) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #162801 -
Flags: approval-aviary?
Updated•21 years ago
|
Flags: blocking-aviary1.0? → blocking-aviary1.0+
Comment 4•21 years ago
|
||
Comment on attachment 162801 [details] [diff] [review]
Let object-tags deal with their own events, only regsiter click events on non-object tags.
a=asa for aviary checkin.
Attachment #162801 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 5•21 years ago
|
||
Fixed on aviary branch.
| Assignee | ||
Updated•21 years ago
|
Keywords: fixed1.7.5
Updated•18 years ago
|
Product: Firefox → Toolkit
Updated•12 years ago
|
Product: Toolkit → Toolkit Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•