Fixing bug 264679. Let object content deal with its own events, don't open the plugin finder when clicking on them, and open the plugin finder from click, not mousedown. r=doronr@us.ibm.com, sr=bzbarsky@mit.edu, asa@mozilla.org